--- a/biblio.bib
+++ b/biblio.bib
@@ -29,7 +29,33 @@
    year = {2015},
 }
 
+@inproceedings{ho1995random,
+  title={Random decision forests},
+  author={Ho, Tin Kam},
+  booktitle={Proceedings of 3rd international conference on document analysis and recognition},
+  volume={1},
+  pages={278--282},
+  year={1995},
+  organization={IEEE}
+}
 
+@article{wu2008top,
+  title={Top 10 algorithms in data mining},
+  author={Wu, Xindong and Kumar, Vipin and Quinlan, J Ross and Ghosh, Joydeep and Yang, Qiang and Motoda, Hiroshi and McLachlan, Geoffrey J and Ng, Angus and Liu, Bing and Philip, S Yu and others},
+  journal={Knowledge and information systems},
+  volume={14},
+  number={1},
+  pages={1--37},
+  year={2008},
+  publisher={Springer}
+}
+
+@book{jain1988algorithms,
+  title={Algorithms for clustering data},
+  author={Jain, Anil K and Dubes, Richard C},
+  year={1988},
+  publisher={Prentice-Hall, Inc.}
+}
 @report{Gower1971,
    author = {J C Gower},
    issue = {4},
