--- a/lib/chapter7.tex
+++ b/lib/chapter7.tex
@@ -225,8 +225,7 @@ En lo que respecta a los costos relacionados con los recursos humanos asignados 
     Total & & & & 1220,6 € \\
     \bottomrule
     \end{tabular}
-    \caption{Tiempo y Costos Asociados}
-    \label{tab:costes-unitarios-activos}
+    \caption{Tiempo y Costos Asociados}\label{tab:costes-unitarios-activos}
 \end{table}
 
 Los costes activos se amortizarán en un periodo de 4 años, la amortización se realizará de forma acelerada es decir las cuotas serán $0.4$, $0.3$, $0.2$, $0.1$ sobre el valor inicial. Actualmente solo se ha amortizado la primera tasa ya que el proyecto ha tenido una duración anual, quedarían tres tasas todavía a pagar de los diferentes activos comprados.
@@ -245,8 +244,8 @@ Estos activos se amortizarán para hacer frente al desgaste al que están someti
     \midrule
     Total & & 250 € & 185 € & 125 € & 63 €  \\
     \bottomrule
-    \end{tabular}\label{tab:costos-amortizados}
-    \caption{Amortizaciones Costos Activos}
+    \end{tabular}
+    \caption{Amortizaciones Costos Activos}\label{tab:costos-amortizados}
 \end{table}
 
 Una vez expuestos los diversos costos incurridos y las amortizaciones aplicadas a los activos, se llega a la conclusión de que el \textbf{Coste Total} del presente Trabajo de Fin de Máster asciende a $10850 + 1220.6 = 12070.6$ euros.
