--- a/lib/zanexo2.tex
+++ b/lib/zanexo2.tex
@@ -157,7 +157,7 @@ Cada archivo se llamará \texttt{NHC-ID.xlsx} y se almacenará en \texttt{../dat
 \end{lstlisting}
 
 
-\subsubsection{Creación de Dataframes Individuales de \textit{Frecuencia Cardíaca} y de \textit{Saturación de Oxígeno} }~\label{sec:anexo2-dataframes}
+\subsubsection{Creación de Dataframes Individuales de \textit{Frecuencia Cardíaca} y de \textit{Saturación de Oxígeno} }\label{sec:anexo2-dataframes}
 
 \begin{lstlisting}[style=mystyle,caption={Creación de Dataframes Individuales de \textit{Frecuencia Cardíaca} y de \textit{Saturación de Oxígeno}}, label={lst:dataframes-idividuales}]
     # Lets put together all the patients in the same data frame
