--- a/main.tex
+++ b/main.tex
@@ -377,8 +377,9 @@ Gracias a mis compañeros Pablo y Ana de la universidad de Aalto por su apoyo y 
 
 Gracias a Jose Manuel y Alberto por invitarme a la Universidad de Alcalá, por a presentarme a su equipo y darme la oportunidad de presentar mi trabajo frente a ellos.
 
-Gracias en último lugar a Pablo Garrido, por ser un educador referente en la Universidad Politécnica de Madrid, por motivarnos y enseñarnos todos los días qué significa ser ingeniero, por hacernos ver que con una ingeniería se puede y por ser un ejemplo a seguir.
+Gracias a Pablo Garrido, por ser un educador referente en la Universidad Politécnica de Madrid, por motivarnos y enseñarnos todos los días qué significa ser ingeniero, por hacernos ver que con una ingeniería se puede y por ser un ejemplo a seguir.
 
+Gracias en último lugar a mi familia por ser familia y estar ahí siempre.
 
 \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
